--- a/style.css
+++ b/style.css
@@ -1,90 +1,83 @@
 .sidebar {
-width: 50%;
-position: fixed;
-z-index: 101;
-left: 0;
-height: calc(100% - 3rem);
-max-width: 450px;
-min-width: 200px;
-background-color: #fff;
-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
-padding: 1.5rem 20px 1.5rem 1rem;
-transform: translateX(-100%);
-transition: transform 0.2s;
-overflow-y: auto;
+    width: 50%;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    height: calc(100% - 3rem);
+    max-width: 450px;
+    min-width: 200px;
+    background-color: #fff;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
+    padding: 1.5rem 20px 1.5rem 1rem;
+    transform: translateX(-100%);
+    transition: transform 0.2s;
+    overflow-y: auto;
 }
 .sidebar.visible {
-  transform: translateX(0);
+    transform: translateX(0);
 }
 
-.sidebar-close-btn{
-  position: absolute;
-  top: 1%;
-  right: 2%;
-  width: 1.2rem;
-  height: 1.2rem;
+.sidebar-close-btn {
+    position: absolute;
+    top: 1%;
+    right: 2%;
+    width: 1.2rem;
+    height: 1.2rem;
 }
 
-.sidebar-topics-item{
-  cursor: pointer;
-  margin-top: 0.3rem;
-  line-height: 1;
-  font-weight: 700;
-  border-radius: 10px;
+.sidebar-topics-item {
+    cursor: pointer;
+    margin-top: 0.3rem;
+    line-height: 1;
+    font-weight: 700;
+    border-radius: 10px;
+}
+.sidebar-topics-item:hover {
+    background: rgba(111, 109, 109, 0.15);
+}
+.sidebar-close-btn:hover {
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
-.sidebar-topics-item:hover{
-  background: rgba(111, 109, 109, 0.15);
+.sidebar-topics,
+.sidebar-topics-item-list {
+    list-style: none;
+    padding: 0;
 }
 
-.sidebar-close-btn:hover{
-  cursor: pointer;
-  transform: scale(1.1);
+.sidebar-topics-item-list {
+    padding-left: 0.5rem;
+    font-weight: 500;
 }
 
-.sidebar-topics-item-list,
-.sidebar-topics{
-  list-style: none;
-  padding: 0;
+.sidebar-topics-item span {
+    display: block;
+    padding: 0.5rem;
+}
+.sidebar-topics-item-list li:last-child::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    border-top: 1px solid rgb(189, 180, 180);
 }
 
-.sidebar-topics-item-list{
-  padding-left: 0.5rem;
-  font-weight: 500;
-}
+.sidebar-topics-item-list-link {
+    color: rgb(60, 60, 60);
 
-.sidebar-topics-item span{
-  display: block;
-  padding: 0.5rem;
 }
-
-.sidebar-topics-item-list li:last-child::after{
-  content: "";
-  position: absolute;
-  width: 80%;
-  border-top: 1px solid rgb(189, 180, 180);
+.sidebar-topics-item-list-link:hover {
+    color: rgb(60, 60, 60);
+    text-decoration: none;
+    font-weight: 700;
 }
-
-.sidebar-topics-item-list-link{
-  color: rgb(60, 60, 60);
-  
+@media screen and (max-width: 700px) {
+    html {
+        font-size: 85%;
+    }
 }
-
-.sidebar-topics-item-list-link:hover{
-  color: rgb(60, 60, 60);
-  text-decoration: none;
-  font-weight: 700;
+@media screen and (max-width: 500px) {
+    html {
+        font-size: 80%;
+    }
 }
-
-@media screen and (max-width: 700px){
-  html{
-  font-size: 85%;
-  }
-}
-
-@media screen and (max-width: 500px){
-  html{
-  font-size: 80%;
-  }
-}
-
